- #205    Wrap annotations in summary
          (thanks to varac)
- #493    :lastweek doesn't count last Sunday
          (thanks to Saulius Krasuckas, Per Møldrup-Dalum, Beshoy Girgis, Sergey Zhuravlevich)
- #494    Expand annotations in summary
          (thanks to catexis)
- #566    Set table width dynamically to terminal width
- #576    Fix quoting of tags in DOM output
-         Add ':today' hint
-         Refactor holidays/refresh script
-         Update task-timewarrior-hook script to 87a3426d8153f92aaee2edf36b2de62e48c4de0e

 ------ current release ---------------------------

1.6.0 (2023-09-18) - cd1aa610ed50558bb2cf141022fa7b41523091ac3ae5fbb9c2d459cfe1afc782

- #529    Fix summary truncating multibyte characters in long annotations
          (thanks to Maxim Beder, Leon Grünewald)
- #531    Update CONTRIBUTING.md to use branch 'develop' instead of 'dev'
          (thanks to Maxim Beder)
- #535    Adding completion for fish shell
          (thanks to Povl Filip Sonne-Frederiksen)
- #538    Fix man page build for out-of-source builds
          (thanks to Benedikt Fein)
- #540    reports should end at current time if a task is still running
          (thanks to Ankur Sinha)
- #547    AtomicFile: Operate on the target of symlinks
          (thanks to Shaun Ruffel, Ivo Forlin)
- #551    Add retag command
          (thanks to Iúri Archer)
- #552    Extend XDG support to macOS
          (thanks to Tadeas Uhlir)
- #553    Configurability of CMake install directories
          (thanks to aMOPel)
- #554    Update documentation for command 'retag'
          (thanks to quazgar)
-         Use local man pages in tests
          (thanks to Maxim Beder)
-         Cleanup CMake files
-         Update project to C++17

------ old releases ------------------------------

1.5.0 (2023-04-04) - 51e7c2c772837bbd6d56da8d16506c4b6de8644166e0b5234ad36ae6a70dd4f6

- #361    Improve documentation
          (thanks to xeruf)
- #389    Extend summary configuration