@@ -25,6 +25,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 #include <IntervalFilterAllInRange.h>
+#include <IntervalFilterAllWithIds.h>
 #include <IntervalFilterAllWithTags.h>
 #include <IntervalFilterAndGroup.h>
 #include <SummaryTable.h>
@@ -53,16 +54,57 @@ int CmdSummary (
   Range default_range = {};
   expandIntervalHint (":" + report_hint, default_range);
 
-  auto range = cli.getRange (default_range);
+  auto ids = cli.getIds ();
   auto tags = cli.getTags ();
 
-  // Load the data.
-  IntervalFilterAndGroup filtering ({
-    std::make_shared <IntervalFilterAllInRange> (range),
-    std::make_shared <IntervalFilterAllWithTags> (tags)
-  });
+  if (! ids.empty () && ! tags.empty ())
+  {
+    throw std::string ("You cannot filter intervals by both, ids and tags.");
+  }
 
-  auto tracked = getTracked (database, rules, filtering);
+  Range range;
+
+  std::vector <Interval> tracked;
+
+  if (! ids.empty ())
+  {
+    auto filtering = IntervalFilterAllWithIds (ids);
+    tracked = getTracked (database, rules, filtering);
+
+    if (tracked.size () != ids.size ())
+    {
+      for (auto& id: ids)
+      {
+        bool found = false;
+
+        for (auto& interval: tracked)
+        {
+          if (interval.id == id)
+          {
+            found = true;
+            break;
+          }
+        }
+        if (! found)
+        {
+          throw format ("ID '@{1}' does not correspond to any tracking.", id);
+        }
+      }
+    }
+
+    range = Range {tracked.begin ()->end, tracked.end ()->start};
+  }
+  else
+  {
+    range = cli.getRange (default_range);
+
+    IntervalFilterAndGroup filtering ({
+      std::make_shared <IntervalFilterAllInRange> (range),
+      std::make_shared <IntervalFilterAllWithTags> (tags)
+    });
+
+    tracked = getTracked (database, rules, filtering);
+  }
 
   if (tracked.empty ())
   {
